feat + refactor:how to play page and addition of quiz template + changes in style of main page

--- a/web-app/templates/main.html
+++ b/web-app/templates/main.html
@@ -3,12 +3,12 @@
 <div class="container-fluid">
         <h1>Otakumeter</h1>
         <h3>How Otaku Are You?</h3>
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
-                <a class="start-menu" id="start" href="/quiz">Start</a>
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <a class="start-menu" href="/quiz">Start</a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
-                <a class="start-menu" id="howto" href="/howto">How to play</a>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <a class="start-menu" href="/howto">How to play</a>
             </div>
         </div>
 </div>
