--- a/web-app/static/css/otakumeter.css
+++ b/web-app/static/css/otakumeter.css
@@ -10,13 +10,21 @@
     margin: 0;
 }
 .container-fluid {
-    margin-top:300px;
+    margin-top:200px;
     width:100%;
-    height:50%;
+    height:60%;
     background-color: white;
 }
-h1,h3{
+h1,h2,h3{
     text-align: center;
+}
+p{
+    margin: 10px auto;
+    word-wrap: break-word;
+    width:40%;
+}
+.text-success,.text-danger {
+    font-size:20px;
 }
 h1 {
     color:blue;
@@ -24,10 +32,11 @@ h1 {
     font-size:60px;
 }
 a.start-menu{
-    display:inline-block;
+    display:block;
     font-size:32px;
+    text-align: center;
 }
-#start{
+#start,#back{
     position:relative;
     left:15%;
 }
