--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -6,6 +6,7 @@
         <title>Otakumeter</title>
         <link href="{{url_for('static',filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
         <link href="{{url_for('static',filename='css/otakumeter.css')}}" rel="stylesheet" type="text/css"/>
+        <link href="{{url_for('static',filename='fontawesome/css/all.css')}}" rel="stylesheet"/>
         <link href="{{url_for('static',filename='otaku.ico')}}" rel="shortcut icon">
     </head>
     <body>
