--- a/web-app/static/css/otakumeter.css
+++ b/web-app/static/css/otakumeter.css
@@ -8,6 +8,7 @@
     height: 100%;
     width: 100%;
     margin: 0;
+    box-sizing: border-box;
 }
 .container-fluid {
     margin-top:200px;
@@ -63,3 +64,49 @@ a.start-menu:hover{
     bottom: 0;
     width: 100%; 
 }
+
+.fab {
+    box-sizing: content-box;
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    display: block !important;
+    text-align: center;
+    text-decoration: none;
+    margin: 2px auto;
+    border-radius: 50%;
+  }
+  
+  .fab:hover {
+      opacity: 0.7;
+      text-decoration: none;
+  }
+
+  #profile-image {
+        display:block;
+        width: 200px;
+        height:200px;
+        margin:20px auto;
+        padding-top:20px;
+  }
+
+  .fa-linkedin-in {
+    background: #007bb5;
+    color: white;
+  }
+  .fa-github {
+    background: #000;
+    color: white;
+  }
+
+  @media screen and (max-width:768px){
+    .fab {
+        box-sizing: content-box;
+        padding: 10px;
+        font-size: 30px;
+        width:30px;
+      }
+    #profile-image {
+        padding-top:10px;
+    }
+  }
