--- a/web-app/static/css/otakumeter.css
+++ b/web-app/static/css/otakumeter.css
@@ -126,6 +126,15 @@ a.start-menu:hover{
       display: none;
   }
 
+  #character {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
   @media screen and (max-width:768px){
     .fab {
         box-sizing: content-box;
