--- a/web-app/templates/quiz.html
+++ b/web-app/templates/quiz.html
@@ -10,10 +10,10 @@
         <h3 id="character"></h3>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-                <a class="ans fake" href="#">Fake <span class="fa fa-times"></span></a>
+                <a class="ans fake" href="javascript:void(0)">Fake <span class="fa fa-times"></span></a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-                    <a class="ans real">Real <span class="fas fa-check"></span></a>
+                    <a class="ans real"  href="javascript:void(0)">Real <span class="fas fa-check"></span></a>
                 </div>
         </div>
 </div>
