--- a/web-app/static/css/otakumeter.css
+++ b/web-app/static/css/otakumeter.css
@@ -13,7 +13,7 @@
 .container-fluid {
     margin-top:200px;
     width:100%;
-    height:60%;
+    height:80%;
     background-color: white;
 }
 h1,h2,h3{
@@ -76,7 +76,7 @@ a.start-menu:hover{
     margin: 2px auto;
     border-radius: 50%;
   }
-  .ans {
+  .ans,.next-retry {
     box-sizing: content-box;
     padding: 20px;
     font-size: 30px;
@@ -87,16 +87,19 @@ a.start-menu:hover{
     margin: 2px auto;
     border-radius: 15px;
 }
+.next-retry{
+    display: none;
+}
   
   .fab:hover,.ans:hover {
       opacity: 0.7;
       text-decoration: none;
   }
 
-  #profile-image {
+  #profile-image,#image-show {
         display:block;
-        width: 200px;
-        height:200px;
+        width: 300px;
+        height:300px;
         margin:20px auto;
         padding-top:20px;
   }
@@ -112,12 +115,12 @@ a.start-menu:hover{
 
   
 
-  .real {
+  .real,.next {
       background :#12E924;
       color:white;
   }
 
-  .fake {
+  .fake,.retry{
       background:#F43704;
       color:white;
   }
