feat: style change and faster retry

--- a/web-app/templates/main.html
+++ b/web-app/templates/main.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {%block body%}
 <div class="container-fluid">
+    <div class="test">
         <h1>Otakumeter</h1>
         <h3>How Otaku Are You?</h3>
         <div class="row">
@@ -11,5 +12,6 @@
                 <a class="start-menu" href="/howto">How to play</a>
             </div>
         </div>
+    </div>
 </div>
 {%endblock%}
