--- a/web-app/templates/quiz.html
+++ b/web-app/templates/quiz.html
@@ -22,7 +22,7 @@
                     <a class="next-retry next" href="javascript:void(0)">Next <span class="fas fa-arrow-right"></span></a>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-                    <a class="next-retry retry"  href="javascript:void(0)">Retry <span class="fa fa-refresh"></span></a>
+                    <a class="next-retry retry"  href="javascript:void(0)">Retry <span class="fas fa-redo-alt"></span></a>
                 </div>
         </div>
 </div>
