--- a/web-app/static/css/otakumeter.css
+++ b/web-app/static/css/otakumeter.css
@@ -1,68 +1,93 @@
 @font-face {
     font-family: 'ONEPIECE';
-    src: url('webfont/ONEPIECE.eot?#iefix') format('embedded-opentype'),  url('webfont/ONEPIECE.woff') format('woff'), url('webfont/ONEPIECE.ttf')  format('truetype'), url('webfont/ONEPIECE.svg#ONEPIECE') format('svg');
+    src: url('webfont/ONEPIECE.eot?#iefix') format('embedded-opentype'), url('webfont/ONEPIECE.woff') format('woff'), url('webfont/ONEPIECE.ttf') format('truetype'), url('webfont/ONEPIECE.svg#ONEPIECE') format('svg');
     font-weight: normal;
     font-style: normal;
-  }
-  html, body {
+}
+
+html,
+body {
     height: 100%;
     width: 100%;
+    font-size: 100%;
     margin: 0;
     box-sizing: border-box;
 }
+
 .container-fluid {
-    margin-top:200px;
-    width:100%;
-    height:80%;
-    background-color: white;
+    width: 100%;
+    /*height: 100%;*/
+    padding: 3em;
+    background-color: rgba(255, 255, 255, 0.5);
 }
-h1,h2,h3{
+
+h1,
+h2,
+h3 {
     text-align: center;
 }
-p{
+a {
+    cursor: pointer;
+}
+p {
     margin: 10px auto;
     word-wrap: break-word;
-    width:40%;
+    width: 40%;
 }
-.text-success,.text-danger {
-    font-size:20px;
+
+.text-success,
+.text-danger {
+    font-size: 1.25em;
 }
+
 h1 {
-    color:blue;
-    font-family:'ONEPIECE',sans-serif;
-    font-size:60px;
+    color: blue;
+    font-family: 'ONEPIECE', sans-serif;
+    font-size: 4em;
 }
-a.start-menu{
-    display:block;
-    font-size:32px;
+
+a.start-menu {
+    display: block;
+    font-size: 2em;
     text-align: center;
 }
-#start,#back{
-    position:relative;
-    left:15%;
+
+#start,
+#back {
+    position: relative;
+    left: 15%;
 }
-#howto{
-    position:relative;
-    left:60%;
+
+#howto {
+    position: relative;
+    left: 60%;
 }
-a.start-menu:hover{
+
+a.start-menu:hover {
     text-decoration: none;
-    transform:scale(1.2);
+    transform: scale(1.2);
 }
 
 
- 
+
 .navbar {
     height: 50px;
 }
- 
+
 .body {
-    background:url(background/background.jpg);
-    opacity:1;   
+    background: url(background/background.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 50px;
     bottom: 0;
-    width: 100%; 
+    width: 100%;
+    height: 100%;
 }
 
 .fab {
@@ -75,77 +100,97 @@ a.start-menu:hover{
     text-decoration: none;
     margin: 2px auto;
     border-radius: 50%;
-  }
-  .ans,.next-retry {
+}
+
+.ans,
+.next-retry {
     box-sizing: content-box;
-    padding: 20px;
-    font-size: 30px;
+    padding: 15px;
+    font-size: 20px;
     width: 300px;
     display: block;
     text-align: center;
     text-decoration: none;
-    margin: 2px auto;
+    margin: 10px auto;
     border-radius: 15px;
 }
-.next-retry{
+
+.next-retry {
     display: none;
 }
-  
-  .fab:hover,.ans:hover {
-      opacity: 0.7;
-      text-decoration: none;
-  }
 
-  #profile-image,#image-show {
-        display:block;
-        width: 300px;
-        height:300px;
-        margin:20px auto;
-        padding-top:20px;
-  }
+.fab:hover,
+.ans:hover,
+.next-retry:hover {
+    opacity: 0.7;
+    text-decoration: none;
+}
 
-  .fa-linkedin-in {
+#profile-image,
+#image-show {
+    display: block;
+    width: 300px;
+    height: 300px;
+    margin: 20px auto;
+    padding-top: 20px;
+}
+@media screen and (max-width: 768px){
+    #profile-image,
+#image-show {
+    width: 200px;
+    height: 200px;
+}
+
+.ans,.next-retry{
+    width:200px;
+}
+}
+.fa-linkedin-in {
     background: #007bb5;
     color: white;
-  }
-  .fa-github {
+}
+
+.fa-github {
     background: #000;
     color: white;
-  }
+}
 
-  
 
-  .real,.next {
-      background :#12E924;
-      color:white;
-  }
 
-  .fake,.retry{
-      background:#F43704;
-      color:white;
-  }
+.real,
+.next {
+    background: #12E924;
+    color: white;
+}
 
-  .hidden {
-      display: none;
-  }
+.fake,
+.retry {
+    background: #F43704;
+    color: white;
+}
 
-  #character {
+.hidden {
+    display: none;
+}
+
+#character {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-  }
+}
 
-  @media screen and (max-width:768px){
+@media screen and (max-width:768px) {
     .fab {
         box-sizing: content-box;
         padding: 10px;
         font-size: 30px;
-        width:30px;
-      }
-    #profile-image {
-        padding-top:10px;
+        width: 30px;
     }
-  }
+
+    #profile-image {
+        padding-top: 10px;
+    }
+}
