--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -2,7 +2,7 @@
 {%block body%}
 <div class="container-fluid">
     <img id="profile-image" src="{{url_for('static',filename='images/profile.jpg')}}"/>
-    <h2 id="job-title">Associate Software Developer</h2>
+    <h2 id="job-title">Software Engineer</h2>
     <h3>For more Info</h3>
     <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
